--- a/arch/arm/configs/wild_defconfig
+++ b/arch/arm/configs/wild_defconfig
@@ -486,12 +486,12 @@ CONFIG_CPU_HAS_L2_PMU=y
 CONFIG_MSM_SMD=y
 # CONFIG_MSM_SMD_PKG3 is not set
 CONFIG_MSM_SMD_PKG4=y
-CONFIG_MSM_SMD_DEBUG=y
+# CONFIG_MSM_SMD_DEBUG is not set
 CONFIG_MSM_BAM_DMUX=y
 CONFIG_MSM_N_WAY_SMD=y
 CONFIG_MSM_N_WAY_SMSM=y
 # CONFIG_MSM_RESET_MODEM is not set
-CONFIG_MSM_SMD_LOGGING=y
+# CONFIG_MSM_SMD_LOGGING is not set
 CONFIG_MSM_IPC_LOGGING=y
 CONFIG_MSM_SMD_NMEA=y
 CONFIG_MSM_HSIC_TTY=y
@@ -1361,7 +1361,7 @@ CONFIG_UID_STAT=y
 CONFIG_ANDROID_VIBRATOR=y
 # CONFIG_PMIC8XXX_NFC is not set
 # CONFIG_PMIC8XXX_UPL is not set
-CONFIG_QSEECOM=y
+# CONFIG_QSEECOM is not set
 # CONFIG_QFP_FUSE is not set
 CONFIG_USB_HSIC_SMSC_HUB=y
 CONFIG_BU52031NVX=y
@@ -1413,8 +1413,8 @@ CONFIG_BLK_DEV_SD=y
 CONFIG_CHR_DEV_SG=y
 CONFIG_CHR_DEV_SCH=y
 CONFIG_SCSI_MULTI_LUN=y
-CONFIG_SCSI_CONSTANTS=y
-CONFIG_SCSI_LOGGING=y
+# CONFIG_SCSI_CONSTANTS is not set
+# CONFIG_SCSI_LOGGING is not set
 CONFIG_SCSI_SCAN_ASYNC=y
 # CONFIG_SCSI_WAIT_SCAN is not set
 
@@ -1608,8 +1608,8 @@ CONFIG_INPUT_FF_MEMLESS=y
 #
 CONFIG_INPUT_MOUSEDEV=y
 CONFIG_INPUT_MOUSEDEV_PSAUX=y
-CONFIG_INPUT_MOUSEDEV_SCREEN_X=1024
-CONFIG_INPUT_MOUSEDEV_SCREEN_Y=768
+CONFIG_INPUT_MOUSEDEV_SCREEN_X=1080
+CONFIG_INPUT_MOUSEDEV_SCREEN_Y=1920
 # CONFIG_INPUT_JOYDEV is not set
 CONFIG_INPUT_EVDEV=y
 # CONFIG_INPUT_EVBUG is not set
@@ -1955,7 +1955,7 @@ CONFIG_SLIMBUS_MSM_CTRL=y
 #
 CONFIG_ARCH_REQUIRE_GPIOLIB=y
 CONFIG_GPIOLIB=y
-CONFIG_DEBUG_GPIO=y
+# CONFIG_DEBUG_GPIO is not set
 CONFIG_GPIO_SYSFS=y
 
 #
@@ -3749,13 +3749,13 @@ CONFIG_LIBCRC32C=y
 CONFIG_AUDIT_GENERIC=y
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
-CONFIG_LZO_COMPRESS=y
-CONFIG_LZO_DECOMPRESS=y
+# CONFIG_LZO_COMPRESS is not set
+# CONFIG_LZO_DECOMPRESS is not set
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
 CONFIG_DECOMPRESS_GZIP=y
-CONFIG_DECOMPRESS_BZIP2=y
-CONFIG_DECOMPRESS_LZMA=y
+# CONFIG_DECOMPRESS_BZIP2 is not set
+# CONFIG_DECOMPRESS_LZMA is not set
 CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_REED_SOLOMON=y
 CONFIG_REED_SOLOMON_ENC8=y
