WildKernel: Support for the f240x

--- a/arch/arm/configs/wild_defconfig
+++ b/arch/arm/configs/wild_defconfig
@@ -380,7 +380,7 @@ CONFIG_MACH_LGE=y
 #
 # LGE Board Selection
 #
-CONFIG_BOARD_HEADER_FILE="mach/lge/board_gkopeneu.h"
+CONFIG_BOARD_HEADER_FILE="mach/lge/board_gku.h"
 # CONFIG_MACH_APQ8064_J1V is not set
 # CONFIG_MACH_APQ8064_J1U is not set
 # CONFIG_MACH_APQ8064_J1A is not set
@@ -396,15 +396,14 @@ CONFIG_BOARD_HEADER_FILE="mach/lge/board_gkopeneu.h"
 # CONFIG_MACH_APQ8064_J1VD is not set
 # CONFIG_MACH_APQ8064_J1X is not set
 # CONFIG_LGE_USB_DIAG_DISABLE is not set
-# CONFIG_MACH_APQ8064_GKU is not set
+CONFIG_MACH_APQ8064_GKU=y
 # CONFIG_MACH_APQ8064_GKSK is not set
 # CONFIG_MACH_APQ8064_GKKT is not set
-# CONFIG_MACH_APQ8064_GK_KR is not set
+CONFIG_MACH_APQ8064_GK_KR=y
 # CONFIG_MACH_APQ8064_GKATT is not set
 # CONFIG_MACH_APQ8064_GKOPENHK is not set
 # CONFIG_MACH_APQ8064_GKOPENTW is not set
 # CONFIG_MACH_APQ8064_GKSHBSG is not set
-CONFIG_MACH_APQ8064_GKOPENEU=y
 # CONFIG_MACH_APQ8064_GKOPENCIS is not set
 # CONFIG_MACH_APQ8064_GKTCLMX is not set
 # CONFIG_MACH_APQ8064_GKOPENBR is not set
@@ -424,11 +423,11 @@ CONFIG_MACH_APQ8064_GKOPENEU=y
 # CONFIG_MACH_APQ8064_GKCCMIL is not set
 # CONFIG_MACH_APQ8064_GKMIRIL is not set
 # CONFIG_MACH_APQ8064_GKPCLIL is not set
-CONFIG_MACH_APQ8064_GKGLOBAL=y
+# CONFIG_MACH_APQ8064_GKGLOBAL is not set
 # CONFIG_MACH_APQ8064_GVDCM is not set
 # CONFIG_MACH_APQ8064_GVKDDI is not set
 # CONFIG_MACH_APQ8064_GVKT is not set
-# CONFIG_MACH_APQ8064_GV_KR is not set
+CONFIG_MACH_APQ8064_GV_KR=y
 # CONFIG_MACH_LGE_DUMMY is not set
 
 #
@@ -1247,7 +1246,7 @@ CONFIG_CFG80211_DEFAULT_PS=y
 # CONFIG_CFG80211_INTERNAL_REGDB is not set
 # CONFIG_CFG80211_WEXT is not set
 # CONFIG_LIB80211 is not set
-# CONFIG_CFG80211_ALLOW_RECONNECT is not set
+CONFIG_CFG80211_ALLOW_RECONNECT=y
 # CONFIG_MAC80211 is not set
 # CONFIG_WIMAX is not set
 CONFIG_RFKILL=y
@@ -1287,11 +1286,11 @@ CONFIG_LGE_NFC_MULTICORE_FASTBOOT=y
 CONFIG_UEVENT_HELPER_PATH=""
 # CONFIG_DEVTMPFS is not set
 CONFIG_STANDALONE=y
-CONFIG_PREVENT_FIRMWARE_BUILD=y
-CONFIG_FW_LOADER=y
-CONFIG_FIRMWARE_IN_KERNEL=y
-CONFIG_EXTRA_FIRMWARE="audience-es325-fw-global.bin"
-CONFIG_EXTRA_FIRMWARE_DIR="firmware"
+# CONFIG_PREVENT_FIRMWARE_BUILD is not set
+# CONFIG_FW_LOADER is not set
+# CONFIG_FIRMWARE_IN_KERNEL is not set
+# CONFIG_EXTRA_FIRMWARE is not set
+# CONFIG_EXTRA_FIRMWARE_DIR is not set
 # CONFIG_DEBUG_DRIVER is not set
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_SYS_HYPERVISOR is not set
@@ -2743,7 +2742,7 @@ CONFIG_SND_SOC_CS8427=y
 CONFIG_SND_SOC_MSM_STUB=y
 CONFIG_SND_SOC_TPA2028D=y
 CONFIG_LGE_AUDIO=y
-CONFIG_SND_SOC_ES325_SLIM=y
+# CONFIG_SND_SOC_ES325_SLIM is not set
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
@@ -3312,6 +3311,11 @@ CONFIG_IOMMU_SUPPORT=y
 CONFIG_MSM_IOMMU=y
 CONFIG_MSM_IOMMU_GPU_SYNC=y
 CONFIG_IOMMU_PGTABLES_L2=y
+
+# LGE Broadcast Device Support
+#
+CONFIG_LGE_BROADCAST_TDMB=y
+CONFIG_LGE_BROADCAST_TDMB_FC8050=y
 
 #
 # Remoteproc drivers (EXPERIMENTAL)
