--- a/arch/arm/configs/wild_defconfig
+++ b/arch/arm/configs/wild_defconfig
@@ -40,7 +40,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-WildKernel-Build-2"
+CONFIG_LOCALVERSION="-WildKernel-Build-2-Reloaded"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -2744,7 +2744,7 @@ CONFIG_SND_SOC_TPA2028D=y
 CONFIG_LGE_AUDIO=y
 # CONFIG_SND_SOC_ES325_SLIM is not set
 CONFIG_SOUND_CONTROL_HAX_GPL=y
-CONFIG_SOUND_CONTROL_HAX_3_GPL=y
+# CONFIG_SOUND_CONTROL_HAX_3_GPL is not set
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
