--- a/arch/arm/configs/wild_defconfig
+++ b/arch/arm/configs/wild_defconfig
@@ -2468,7 +2468,8 @@ CONFIG_RADIO_ADAPTERS=y
 #
 # CONFIG_RADIO_WL128X is not set
 # CONFIG_RADIO_TAVARUA is not set
-# CONFIG_RADIO_IRIS is not set
+CONFIG_RADIO_IRIS=y
+CONFIG_RADIO_IRIS_TRANSPORT=m
 
 #
 # Graphics support
