--- a/flashable/tools/ramdisks/5.0_override/init.gee-common.rc
+++ b/flashable/tools/ramdisks/5.0_override/init.gee-common.rc
@@ -386,8 +386,9 @@ service sdcard /system/bin/sdcard -u 1023 -g 1023 -l /data/media /mnt/shell/emul
 service thermald /system/bin/thermald
     class main
 
-service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
-    class main
+# Intelli-plug for now
+# service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
+#    class main
 
 service qosmgrd /system/bin/qosmgr /system/etc/qosmgr_rules.xml
    user system
